--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Beautiful Jekyll</title>
+    <title>Technology Hub Wiki</title>
 <!--    <script>-->
 <!--        window.location = "https://beautifuljekyll.com";-->
 <!--    </script>-->
@@ -13,8 +13,11 @@
 <!--    </noscript>-->
 </head>
 <body>
-This is the wiki pages for the developers/postdocs, Elixir3 personnel working across the different WPs and current and future ELIXIR Norway services.
-As a knowledge base, these pages serve as a reference of the important principles, methods and examples for the development process as well as best practices of how to apply this knowledge in daily tasks.
+<div>
+    This is the wiki pages for the developers/postdocs, Elixir3 personnel working across the different WPs and current and future ELIXIR Norway services.
+    As a knowledge base, these pages serve as a reference of the important principles, methods and examples for the development process as well as best practices of how to apply this knowledge in daily tasks.
+</div>
+
 <script>
     // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     //     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
