check _config changes

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 <head>
     <meta charset="utf-8">
     <title>Technology Hub Wiki</title>
-<!--    <script>-->
-<!--        window.location = "https://beautifuljekyll.com";-->
-<!--    </script>-->
-<!--    <noscript>-->
-<!--        <a href="https://beautifuljekyll.com">Click here to go to the Beautiful Jekyll website</a>-->
-<!--    </noscript>-->
+    <script>
+        window.location = "https://beautifuljekyll.com";
+    </script>
+    <noscript>
+        <a href="https://beautifuljekyll.com">Click here to go to the Beautiful Jekyll website</a>
+    </noscript>
 </head>
 <body>
 <div>
